Bugfixes FavSelector, z-index, add album

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body {
   color: black;
   background-color: white;
   opacity: 0.3;
+  z-index: 10;
 }
 
 .selectionOverlay .isSelected {
